2011-05-10  Mike Frysinger  <vapier@gentoo.org>

  * src/tap/usbconn/libftdi.c (usbconn_ftdi_common_open): Use the new interface
    option and call ftdi_set_interface with it.  Patch by Michael Walle.

  * src/tap/cable/generic_usbconn.h: Add new "interface" option to usage.
    Patch by Michael Walle.

  * data/Makefile.am, data/xilinx/PARTS, data/xilinx/xc2c32a-cp56/STEPPINGS,
    data/xilinx/xc2c32a-cp56/xc2c32a-cp56, data/xilinx/xc2c32a-cv64/STEPPINGS,
    data/xilinx/xc2c32a-cv64/xc2c32a-cv64, data/xilinx/xc2c32a-vq44/STEPPINGS,
    data/xilinx/xc2c32a-vq44/xc2c32a-vq44: Add Xilinx CoolRunner-II info from
    Michael Walle.

2011-04-30  Mike Frysinger  <vapier@gentoo.org>

  * configure.ac: Force recent versions of autotools (at least ones released
    in the past 5 years.

  * src/bsdl/Makefile.am (OBJEXT): Do not override OBJEXT that automake sets
    up itself.
  * src/svf/Makefile.am (OBJEXT): Likewise.

2011-03-08  Mike Frysinger  <vapier@gentoo.org>

  * data/xilinx/PARTS: Add xc3s1600e part.
  * data/xilinx/xc3s100e_die/STEPPINGS: Add stepping 1.
  * data/xilinx/xc3s1200e_fg320/xc3s1200e_fg320: Add part info.
  * data/xilinx/xc3s1200e_fg320/STEPPINGS: Add stepping info.
  * data/xilinx/xc3s1600e/xc3s1600e: Add part info.
  * data/xilinx/xc3s1600e/STEPPINGS: Add stepping info.
  * data/xilinx/xcf04s/STEPPINGS: Add stepping 15.
  * data/Makefile.am: Add new xilinx files.

2011-03-07  Mike Frysinger  <vapier@gentoo.org>

  * src/tap/cable/generic.c (do_one_queued_action): Move debug statements to
    debug log level.  Patch by Øyvind Harboe.

2011-03-07  Mike Frysinger  <vapier@gentoo.org>

  * src/tap/cable/jim.c: Update get/set prototypes enough so that the code
    will at least compile again.

  * MAINTAINERS: Update paths to Blackfin related files.

  * src/tap/detect.c (urj_tap_detect_parts): Clarify detect behavior with
    parts that default to IDCODE or BYPASS since both are acceptable to the
    JTAG IEEE standard.
